--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>25:5 Clock</title>
     <script
       src="https://kit.fontawesome.com/9b1b322d51.js"
       crossorigin="anonymous"
